helm-charts/istio-gateway/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: frontend
   namespace: prod
spec:
   hosts:
   - "*"
   gateways:
   - frontend
   http:
       - route:
           - destination:
               host: nginx
               port:
                   number: 30162
